Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,121 @@
 html {
-  font-family: 'Ubuntu', sans-serif;
-}
-
-
-h1 {
-	display: none; 
-	opacity: 0; 
-	left: 15px;
-}
-
-.tile {
-	background-attachment: fixed;
-	position: relative;
-	width: 100%;
-	min-height: 100px;
-	height: auto;
-	padding: 30px 230px; /* 230 = container padding [215] + text padding [15] */
-}
-
-#content {
-	margin-top: 50px; /* offset from top by height of navbar */
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
 	font-weight: bold;
+}
+
+.slide {
+	margin-top: 160px;
+	margin-bottom: 160px;
+}
+
+/** The styles from here through #done came with Skrollr **/
+* {
+	padding:0;
+	margin:0;
+}
+
+html, body {
+	height:100%;
+}
+
+.skrollr-desktop body {
+	padding-top:30px;
+	height:100% !important;
+}
+
+body {
+	font-family:sans-serif;
+}
+
+p {
+	margin:1em 0;
+}
+
+.parallax-image-wrapper {
+	position:fixed;
+	left:0;
+	width:100%;
+	overflow:hidden;
+}
+
+.parallax-image-wrapper-50 {
+	height:50%;
+	top:-50%;
+}
+
+.parallax-image-wrapper-100 {
+	height:100%;
+	top:-100%;
+}
+
+.parallax-image {
+	display:none;
+	position:absolute;
+	bottom:0;
+	left:0;
+	width:100%;
+	background-repeat:no-repeat;
+	background-position:center;
+	background-size:cover;
+}
+
+.parallax-image-50 {
+	height:200%;
+	top:-50%;
+}
+
+.parallax-image-100 {
+	height:100%;
+	top:0;
+}
+
+.parallax-image.skrollable-between {
+	display:block;
+}
+
+.no-skrollr .parallax-image-wrapper {
+	display:none !important;
+}
+
+#skrollr-body {
+	height:100%;
+	overflow:visible;
+	position:relative;
+}
+
+.gap {
+	background:transparent center no-repeat;
+	background-size:cover;
+}
+
+.skrollr .gap {
+	background:transparent !important;
+}
+
+.gap-50 {
+	height:50%;
+}
+
+.gap-100 {
+	height:100%;
+}
+
+.header, .content {
+	background:#fff;
+	padding:1em;
+
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
+}
+
+.content-full {
+	height:100%;
+}
+
+#done {
+	height:100%;
 }
